<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="214dp"
        android:layout_height="67dp"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/cs481_hw4_n_shane_ghuste"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainBtnAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/acme"
        android:text="@string/api"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:backgroundTint="#602136"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/mainBTNPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/acme"
        android:text="@string/permission"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:backgroundTint="#602136"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBtnAPI" />

    <Button
        android:id="@+id/mainBTNLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/acme"
        android:text="@string/library"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:backgroundTint="#602136"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBTNPermission" />

</androidx.constraintlayout.widget.ConstraintLayout>